--- a/Beeftext/Preferences/Panes/PrefPaneBehavior.ui
+++ b/Beeftext/Preferences/Panes/PrefPaneBehavior.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>708</width>
-    <height>146</height>
+    <height>170</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -62,6 +62,13 @@
     <widget class="QCheckBox" name="checkPlaySoundOnCombo">
      <property name="text">
       <string>&amp;Play sound on combo</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkAutoPressEnterAfterSubstitution">
+     <property name="text">
+      <string>Automatically press &amp;Enter after text substitution</string>
      </property>
     </widget>
    </item>
